--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "student portal for portfolio full stack project",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "sujit pandey",
