--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "nodemon": "^3.1.11"
   },
   "dependencies": {
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "joi": "^18.0.2",
+    "multer": "^2.0.2"
   }
 }
