update environment configuration and enhance error handling middleware

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,20 @@
-# replace <password> and <database_name> with actual values
+## replace <password>, <database_name> and other placeholders with actual values
+
 MONGODB_URL=mongodb+srv://root:<password>@student-portal.bnnxfhn.mongodb.net/?appName=student-portal
-MONGODB_NAMAE=<database_name>
+MONGODB_NAME=<database_name>
+
+## JWT secrets
+JWT_SECRET=<your_jwt_secret_for_login_tokens>
+ACTIVATION_SECRET=<your_activation_token_secret>
+
+## SMTP (Gmail) configuration
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=<your_gmail_address>
+SMTP_PASSWORD=<your_app_password>
+SMTP_FROM=<display_from_email>
+
+## Application URL (backend)
+APP_URL=http://localhost:9005
 
 
